# nlp_text_cleaner

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.circleci/: config.yml
nlp_text_cleaner/: nlp_text_cleaner.py
src/: nlp_text_cleaner.py
src/nlp_text_cleaner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_main.py  test_nlp_text_cleaner.py
