[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp_text_cleaner"
version = "1.0.10"
description = "Clean the text for NLP project"
readme = "README.md"
authors = [{ name = "Sarang Mete", email = "sarang0909.bds@gmail.com" }]
license = {text = "MIT License"}
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
]

keywords = ["nlp", "text cleaning","natural-language-processing", "text-cleaning", "text-preprocessing"]
dependencies = [
    "langdetect",
    "nltk",
    "regex",
    "autocorrect"
]


[project.optional-dependencies]
dev = ["black", "pylint", "isort", "pip-tools", "pytest","pytest-cov"]

[tool.setuptools]
packages = ["nlp_text_cleaner"]



[project.urls]
Homepage = "https://github.com/sarang0909/nlp_text_cleaner"
 